# OpsDeck

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  architecture-map.html  docker-compose.yml  package-lock.json  package.json  start.sh
apps/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py  script.py.mako
apps/backend/app/: main.py
apps/backend/scripts/: seed_demo.py
apps/backend/tests/: test_action_recommendation.py  test_auth_tenancy.py  test_configuration_completeness_operational_trust.py  test_configuration_validation.py  test_container_tracking.py  test_continuity_threshold_admin.py  test_continuity_threshold_consumption.py  test_continuity_timeline.py  test_daily_continuity_brief.py  test_data_source_scheduler.py  test_data_source_sync.py  test_exception_workflow.py  test_executive_dashboard.py  test_exposure_mapping.py  test_health.py  test_historical_validation_report.py  test_impact_engine.py  test_inbound_delay_cover_intelligence.py  test_ingestion_uploads.py  test_inventory_continuity.py  test_microsoft_integration.py  test_movement_monitoring.py  test_notifications.py  test_operational_event_confidence.py  test_operational_history.py  test_pilot_hardening.py  test_pilot_readiness.py  test_pilot_scenario_validation_pack.py  test_product_process_dependency_admin.py  test_relationship_graph.py  test_risk_snapshot_comparison.py  test_risk_snapshots.py  test_risk_workspace_inbound_protection.py  test_rule_engine.py  test_seed_demo_interruption_impact.py  test_shipment_continuity.py  (+13 more)
docs/: erd.md  (+41 more)
(+320 files in other folders)
